--- a/Plan mejoramiento/src/components/SobreNosotros/SobreNosotros.css
+++ b/Plan mejoramiento/src/components/SobreNosotros/SobreNosotros.css
@@ -1,13 +1,3 @@
-*{
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body{
-  background: #626263;
-}
-
 .Container{
   background: #2A2E35;
   height: 550px;
@@ -21,13 +11,15 @@ body{
 }
 
 .Titulo{
-  display: flex;
-  align-items: center;
   width: 40px;
   color: whitesmoke;
   font-size: 15px;
   margin-left: 5px;
   text-shadow: 0px 0px 5px black;
+}
+
+.Titulo h1{
+  text-align: center;
 }
 
 .Menu{
