--- a/Plan mejoramiento/src/components/Inicio/Inicio.css
+++ b/Plan mejoramiento/src/components/Inicio/Inicio.css
@@ -57,7 +57,7 @@
     display: flex;
     gap: 20px;
     margin-bottom: 40px;
-    margin-left: 20px;
+    margin-left: 42px;
     height: 220px;
     padding-top: 30px;
 }
@@ -89,10 +89,10 @@
 }
 
 .circulo{
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background: white;
-    border-radius: 50px;
+    border-radius: 70px;
     margin-top: 15px;
 }
 
@@ -106,7 +106,6 @@
     display: flex;
     padding-top: 20px;
     height: 455px;
-    margin-bottom: 30px;
 }
 
 .Seccion2{
@@ -120,6 +119,13 @@
 
 .Seccion2 h4{
     padding-bottom: 10px;
+    margin-left: 11px;
+}
+
+.Comentarios p{
+    font-size: 12px;
+    margin-left: 11px;
+    padding-top: 12px;
 }
 
 .BOX{
@@ -127,7 +133,7 @@
     height: 350px;
     width: 1150px;
     margin-right: 40px;
-    margin-left: 60px;
+    margin-left: 90px;
     display: flex;
     justify-content: space-between;
 }
@@ -152,15 +158,16 @@
     display: flex;
     gap: 10px;
     padding-top: 40px;
+    margin-left: 12px;
 }
 
 .Circle1 h5{
-    font-size: 15px;
+    font-size: 12px;
     padding-bottom: 5px;
 }
 
 .Circle2 h5{
-    font-size: 15px;
+    font-size: 12px;
     padding-bottom: 5px;
 }
 
@@ -198,7 +205,7 @@
 }
 
 .BOX1{
-    width: 600px;
+    width: 1000px;
     height: 200px;
     background: #2A2E35;
     margin-top: 25px;
@@ -210,7 +217,7 @@
 }
 
 .BOX2{
-    width: 250px;
+    width: 265px;
     height: 200px;
     background: #2A2E35;
     margin-top: 25px;
@@ -221,7 +228,7 @@
 }
 
 .BOX3{
-    width: 250px;
+    width: 265px;
     height: 200px;
     background: #2A2E35;
 }
@@ -231,7 +238,7 @@
 }
 
 .BOX4{
-    width: 600px;
+    width: 1000px;
     height: 200px;
     background: #2A2E35;
     border-left: 10px solid #3A3F47;
