--- a/Plan mejoramiento/src/components/Login/Login.css
+++ b/Plan mejoramiento/src/components/Login/Login.css
@@ -1,3 +1,21 @@
+.Header{
+    padding: 10px;
+    background: #1a2836;
+}
+
+.Volver{
+    text-decoration: none;
+    width: 60px;
+    height:30px;
+    background: #626567;
+    padding-top: 5px;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0 0 8px 0px black;
+}
+
+
+
 .ContainerLogin {
     display: flex;
     justify-content: center;
