--- a/Plan mejoramiento/src/components/Registro/Registro.css
+++ b/Plan mejoramiento/src/components/Registro/Registro.css
@@ -1,3 +1,19 @@
+.Header{
+    padding: 10px;
+    background: #1a2836;
+}
+
+.Volver{
+    text-decoration: none;
+    width: 60px;
+    height:30px;
+    background: #626567;
+    padding-top: 5px;
+    text-align: center;
+    border-radius: 20px;
+    box-shadow: 0 0 8px 0px black;
+}
+
 .register-container {
     display: flex;
     min-height: 100vh;
